--- a/drivers/clock/Makefile
+++ b/drivers/clock/Makefile
@@ -14,3 +14,4 @@ c_src-$(CONFIG_CLOCK_ATSAME5X) += $(drivers-clock)/clock-same5x.c
 c_src-$(CONFIG_CLOCK_STM32H7XX) += $(drivers-clock)/clock-stm32h7xx.c
 c_src-$(CONFIG_CLOCK_TINYAVR) += $(drivers-clock)/clock-tinyavr.c
 c_src-$(CONFIG_CLOCK_RENESAS_RA4) += $(drivers-clock)/clock-renesas_ra4.c
+c_src-$(CONFIG_CLOCK_MPC574XX) += $(drivers-clock)/clock-mpc574xx.c
