distcheck: updated demos .configs & pic32mx missing stdbool.h

--- a/demo/arduino-uno_r4/.config
+++ b/demo/arduino-uno_r4/.config
@@ -6,7 +6,7 @@ CONFIG_ARM=y
 # CONFIG_AVR is not set
 # CONFIG_C2000 is not set
 # CONFIG_MIPS is not set
-# CONFIG_PPC is not set
+# CONFIG_POWERPC is not set
 # CONFIG_RISCV is not set
 # CONFIG_PTHREAD is not set
 # CONFIG_WIN32 is not set
@@ -34,7 +34,6 @@ CONFIG_SINGLE_CORE=y
 #
 # General setup
 #
-CONFIG_SYSCLK_HZ=48000000
 CONFIG_TICK_HZ=1000
 CONFIG_TASK_COUNT=8
 CONFIG_DEFAULT_STACK_COUNT=128
@@ -74,12 +73,14 @@ CONFIG_COND=y
 # CONFIG_ADC_RP2040 is not set
 # CONFIG_ADC_SAM3X is not set
 # CONFIG_ADC_SAME5X is not set
+CONFIG_ADC_RENESAS_RA4=y
 
 #
 # CAN drivers
 #
 # CONFIG_CAN_TI_DCAN is not set
 # CONFIG_CAN_ATSAM3X is not set
+# CONFIG_CAN_NXP_FLEXCAN is not set
 
 #
 # Clock drivers
@@ -113,6 +114,7 @@ CONFIG_CLOCK_RENESAS_RA4=y
 # CONFIG_GPIO_ATSAM3X is not set
 # CONFIG_GPIO_ATSAME5X is not set
 # CONFIG_GPIO_STM32H7XX is not set
+CONFIG_GPIO_RENESAS_RA4=y
 
 #
 # Misc. drivers
@@ -137,6 +139,7 @@ CONFIG_MUX_RENESAS_RA4=y
 # CONFIG_PWM_ATSAM3X_TC is not set
 # CONFIG_PWM_ATSAME5X is not set
 # CONFIG_PWM_STM32H7XX is not set
+CONFIG_PWM_RENESAS_RA4_GPT=y
 
 #
 # SPI drivers
@@ -145,6 +148,7 @@ CONFIG_MUX_RENESAS_RA4=y
 # CONFIG_SPI_ATMEL_SERCOM is not set
 # CONFIG_SPI_ATSAM3X is not set
 # CONFIG_SPI_STM32H7XX is not set
+CONFIG_SPI_RENESAS_RA4=y
 
 #
 # TWI/I2C drivers
@@ -160,6 +164,7 @@ CONFIG_MUX_RENESAS_RA4=y
 # CONFIG_UART_ATMEL_SERCOM is not set
 # CONFIG_UART_ATSAM3X is not set
 # CONFIG_UART_STM32H7XX is not set
+CONFIG_UART_RENESAS_RA4_SCI=y
 
 #
 # Watchdog drivers
@@ -177,7 +182,6 @@ CONFIG_STAGING=y
 #
 # ADC drivers
 #
-CONFIG_ADC_RENESAS_RA4=y
 
 #
 # CAN drivers
@@ -204,7 +208,6 @@ CONFIG_ADC_RENESAS_RA4=y
 #
 # GPIO drivers
 #
-CONFIG_GPIO_RENESAS_RA4=y
 
 #
 # LIN drivers
@@ -221,12 +224,10 @@ CONFIG_GPIO_RENESAS_RA4=y
 #
 # PWM drivers
 #
-CONFIG_PWM_RENESAS_RA4_GPT=y
 
 #
 # SPI drivers
 #
-CONFIG_SPI_RENESAS_RA4=y
 
 #
 # TWI drivers
@@ -237,4 +238,3 @@ CONFIG_TWI_RENESAS_RA4=y
 #
 # UART drivers
 #
-CONFIG_UART_RENESAS_RA4_SCI=y
