--- a/demo/arduino-uno/.config
+++ b/demo/arduino-uno/.config
@@ -6,7 +6,7 @@
 CONFIG_AVR=y
 # CONFIG_C2000 is not set
 # CONFIG_MIPS is not set
-# CONFIG_PPC is not set
+# CONFIG_POWERPC is not set
 # CONFIG_RISCV is not set
 # CONFIG_PTHREAD is not set
 # CONFIG_WIN32 is not set
@@ -19,6 +19,7 @@ CONFIG_ATMEGA=y
 # CONFIG_MACH_ATMEGA2560 is not set
 CONFIG_MACH_ATMEGA328P=y
 # CONFIG_MACH_ATMEGA32U4 is not set
+CONFIG_SYSCLK_HZ=16000000
 
 #
 # Scheduler options
@@ -29,7 +30,6 @@ CONFIG_SINGLE_CORE=y
 #
 # General setup
 #
-CONFIG_SYSCLK_HZ=16000000
 CONFIG_TICK_HZ=1000
 CONFIG_TASK_COUNT=7
 CONFIG_DEFAULT_STACK_COUNT=128
