--- a/demo/attiny1607-cnano/.config
+++ b/demo/attiny1607-cnano/.config
@@ -6,7 +6,7 @@
 CONFIG_AVR=y
 # CONFIG_C2000 is not set
 # CONFIG_MIPS is not set
-# CONFIG_PPC is not set
+# CONFIG_POWERPC is not set
 # CONFIG_RISCV is not set
 # CONFIG_PTHREAD is not set
 # CONFIG_WIN32 is not set
@@ -18,6 +18,7 @@ CONFIG_AVR=y
 CONFIG_ATTINY=y
 # CONFIG_MACH_ATTINY817 is not set
 CONFIG_MACH_ATTINY1607=y
+CONFIG_SYSCLK_HZ=32768
 
 #
 # Scheduler options
@@ -28,7 +29,6 @@ CONFIG_SINGLE_CORE=y
 #
 # General setup
 #
-CONFIG_SYSCLK_HZ=32768
 CONFIG_TICK_HZ=1000
 CONFIG_TASK_COUNT=5
 CONFIG_DEFAULT_STACK_COUNT=48
