--- a/demo/pthread-linux/.config
+++ b/demo/pthread-linux/.config
@@ -6,7 +6,7 @@
 # CONFIG_AVR is not set
 # CONFIG_C2000 is not set
 # CONFIG_MIPS is not set
-# CONFIG_PPC is not set
+# CONFIG_POWERPC is not set
 # CONFIG_RISCV is not set
 CONFIG_PTHREAD=y
 # CONFIG_WIN32 is not set
@@ -25,7 +25,6 @@ CONFIG_SINGLE_CORE=y
 #
 # General setup
 #
-CONFIG_SYSCLK_HZ=100
 CONFIG_TICK_HZ=10
 CONFIG_TASK_COUNT=5
 CONFIG_DEFAULT_STACK_COUNT=128
