--- a/drivers/gpio/Kconfig
+++ b/drivers/gpio/Kconfig
@@ -44,4 +44,8 @@ config GPIO_NXP_SIUL2
        depends on POWERPC
        bool "NXP SIUL2 GPIOs"
 
+config GPIO_NXP_SIU
+       depends on POWERPC
+       bool "NXP SIU GPIOs"
+
 endmenu
