clock: unstaged NXP SIU clock driver

--- a/drivers/clock/Kconfig
+++ b/drivers/clock/Kconfig
@@ -48,4 +48,8 @@ config CLOCK_MPC574XX
        depends on POWERPC
        bool "MPC574x series clock"
 
+config CLOCK_NXP_SIU
+       depends on POWERPC
+       bool "NXP SIU clock"
+
 endmenu
