--- a/test/footprint/Makefile
+++ b/test/footprint/Makefile
@@ -7,7 +7,7 @@ ifeq ($(skip-makefile),)
 PWD := $(shell pwd)
 KBUILD_SRC := ../..
 
-ARCHS := armv7e-m armv7-m atmega attiny c28x rp2040
+ARCHS := armv7e-m armv7-m atmega attiny c28x rp2040 e200z4 e200z7
 TARGETS := $(ARCHS:%=%.out)
 
 all: $(TARGETS)
