--- a/scripts/Makefile.sdcc
+++ b/scripts/Makefile.sdcc
@@ -26,6 +26,13 @@ ccflags-$(CONFIG_DEBUG) += --debug
 ccflags-$(CONFIG_NDEBUG) += -DNDEBUG
 ldflags-$(CONFIG_DEBUG) += --debug
 
+# attributes
+ccattributes := -D"__ATTRIBUTE_ALIGNED__(x)="
+ccattributes += -D"__ATTRIBUTE_UNUSED__="
+ccattributes += -D"__ATTRIBUTE_NAKED__=__naked"
+
+# map ?
+
 # The filename Kbuild has precedence over Makefile
 kbuild-dir := $(if $(filter /%,$(src)),$(src),$(srctree)/$(src))
 kbuild-file := $(if $(wildcard $(kbuild-dir)/Kbuild),$(kbuild-dir)/Kbuild,$(kbuild-dir)/Makefile)
@@ -42,11 +49,11 @@ inctree     = $(patsubst %/,%,$(addprefix -I,$(dir $(1))))
 
 c_flags     = --std-c99 $(opt-y) $(debug-y) $(RTOSINCLUDE) \
               $(sort $(call inctree,$(c_src-y)) $(call inctree,$(a_src-y))) \
-              $(ccflags-y) $(subst ",,$(CONFIG_EXTRA_CFLAGS))
+              $(ccflags-y) $(subst ",,$(CONFIG_EXTRA_CFLAGS)) $(ccattributes)
 
 a_flags     = $(debug-y) $(RTOSINCLUDE) \
               $(sort $(call inctree,$(c_src-y)) $(call inctree,$(a_src-y))) \
-              $(asflags-y) $(subst ",,$(CONFIG_EXTRA_CFLAGS))
+              $(asflags-y) $(subst ",,$(CONFIG_EXTRA_CFLAGS)) -los
 
 ld_flags    = $(LDFLAGS) $(ldflags-y) $(subst ",,$(CONFIG_EXTRA_LDFLAGS))
 
@@ -68,33 +75,32 @@ endif
 __sdcc: $(target) $(always)
           @:
 
-# Prepare object files (.o)
+# Prepare object files (.rel)
 # ---------------------------------------------------------------------------
-obj-y := $(c_src-y:%.c=%.o)
-obj-y += $(a_src-y:%.asm=%.o)
+obj-y := $(a_src-y:%.S=%.rel)
+obj-y += $(c_src-y:%.c=%.rel)
 
 # Compile C sources (.c)
 # ---------------------------------------------------------------------------
 
 # C (.c) files
 # The C file is compiled and updated dependency information is generated.
-# (See cmd_cc_o_c + relevant part of rule_cc_o_c)
+# (See cmd_cc_rel_c + relevant part of rule_cc_rel_c)
 
-quiet_cmd_cc_o_c = CC $(quiet_modtag)  $@
-cmd_cc_o_c = $(CC) $(c_flags) -o $@ -c $<
-
+quiet_cmd_cc_rel_c = CC $(quiet_modtag)  $@
+cmd_cc_rel_c = $(CC) $(c_flags) -o $@ -c $<
 # Built-in and composite module parts
-%.o: %.c FORCE
-	$(call if_changed,cc_o_c)
+%.rel: %.c FORCE
+	$(call if_changed,cc_rel_c)
 
 # Compile assembler sources (.asm)
 # ---------------------------------------------------------------------------
 
-quiet_cmd_as_o_S = AS $(quiet_modtag)  $@
-cmd_as_o_S       = $(CC) $(a_flags) -o $@ -c $<
+quiet_cmd_as_rel_S = AS $(quiet_modtag)  $@
+cmd_as_rel_S       = $(sdas-y) $(a_flags) -o $@ $<
 
-%.o: %.asm FORCE
-	$(call if_changed,as_o_S)
+%.rel: %.S FORCE
+	$(call if_changed,as_rel_S)
 
 targets += $(real-objs-y) $(lib-y)
 targets += $(extra-y) $(MAKECMDGOALS) $(always)
@@ -103,14 +109,14 @@ targets += $(extra-y) $(MAKECMDGOALS) $(always)
 # Rule to compile a set of .o files into one .o file
 #
 ifdef target
-quiet_cmd_link_o_target = LD      $@
+quiet_cmd_link_rel_target = LD      $@
 # If the list of objects to link is empty, just create an empty built-in.o
-cmd_link_o_target = $(if $(strip $(obj-y)),\
-		      $(CC) $(ld_flags) -o $@ $(filter $(obj-y), $^) $(map), \
+cmd_link_rel_target = $(if $(strip $(obj-y)), \
+		      $(CC) $(ld_flags) $(filter $(obj-y), $^) -o $@, \
 		      rm -f $@; $(AR) rcs$(KBUILD_ARFLAGS) $@)
 
 $(target): $(obj-y) FORCE
-	$(call if_changed,link_o_target)
+	$(call if_changed,link_rel_target)
 
 targets += $(target)
 endif # target
