--- a/arch/8051/Makefile
+++ b/arch/8051/Makefile
@@ -5,13 +5,29 @@ arch-8051 := $(srctree)/arch/8051
 mcu-$(CONFIG_8051) := -mmcs51 --model-large --stack-auto --int-long-reent
 
 # required
-cinclude-$(CONFIG_8051) += -I$(arch-8051)/include \
-			   --include $(arch-8051)/include/errno.h
+include-$(CONFIG_8051) += -I$(arch-8051)/include
 
 # machines
 a_src-$(CONFIG_MACH_N76E003) += $(arch-8051)/mach-n76e003/startup.S
+c_src-$(CONFIG_MACH_N76E003) += $(arch-8051)/mach-n76e003/timer-t2.c
+c_src-$(CONFIG_MACH_N76E003) += $(arch-8051)/mach-n76e003/interrupt.c
 a_src-$(CONFIG_MACH_UCSIM51) += $(arch-8051)/mach-ucsim_51/startup.S
-a_src-$(CONFIG_MACH_EZUSBFX2) += $(arch-8051)/mach-ezusbfx2/startup.S
+c_src-$(CONFIG_MACH_UCSIM51) += $(arch-8051)/mach-mcs51/timer-t2.c
+c_src-$(CONFIG_MACH_UCSIM51) += $(arch-8051)/mach-mcs51/interrupt.c
+a_src-$(CONFIG_MACH_CY7C6801xA) += $(arch-8051)/mach-cy7c6801xa/startup.S
+c_src-$(CONFIG_MACH_CY7C6801xA) += $(arch-8051)/mach-cy7c6801xa/timer-t2.c
+c_src-$(CONFIG_MACH_CY7C6801xA) += $(arch-8051)/mach-cy7c6801xa/interrupt.c
+
+# N76E003 memory map
+mcu-$(CONFIG_MACH_N76E003) += --xram-size 768
+mcu-$(CONFIG_MACH_N76E003) += --code-size 18432
+# CY7C6801xA memory map (shared CODE/XDATA RAM)
+ifeq ($(CONFIG_MACH_CY7C6801xA),y)
+code-size := $(shell expr 16384 - $(CONFIG_XDATA_SIZE))
+mcu-$(CONFIG_MACH_CY7C6801xA) += --xram-loc $(code-size)
+mcu-$(CONFIG_MACH_CY7C6801xA) += --xram-size $(CONFIG_XDATA_SIZE)
+mcu-$(CONFIG_MACH_CY7C6801xA) += --code-size $(code-size)
+endif
 
 c_src-$(CONFIG_8051) += $(arch-8051)/picoRTOS_port.c
 a_src-$(CONFIG_8051) += $(arch-8051)/picoRTOS_portasm.S
