e200z7 SMP: main core waits for aux cores to idle in arch_core_init()

--- a/arch/powerpc/Kconfig
+++ b/arch/powerpc/Kconfig
@@ -30,4 +30,9 @@ config CACHE_MAINTENANCE
        default y if E200Z4
        default n if E200Z7
 
+config DEBUG_AUX_CORE_STARTUP
+       bool "Debug auxiliary core startup (Warning: not for production)"
+       depends on SMP
+       default n
+
 endmenu
