--- a/staging/demo/mpc5775e-evb/configs/mpc5775e-evb-SMP_flash_defconfig
+++ b/staging/demo/mpc5775e-evb/configs/mpc5775e-evb-SMP_flash_defconfig
@@ -10,7 +10,7 @@ CONFIG_POWERPC=y
 # CONFIG_RISCV is not set
 # CONFIG_PTHREAD is not set
 # CONFIG_WIN32 is not set
-CONFIG_CACHE_MAINTENANCE=y
+# CONFIG_CACHE_MAINTENANCE is not set
 
 #
 # PowerPC architecture
@@ -18,6 +18,7 @@ CONFIG_CACHE_MAINTENANCE=y
 # CONFIG_E200Z4 is not set
 CONFIG_E200Z7=y
 CONFIG_MACH_MPC577X=y
+CONFIG_DEBUG_AUX_CORE_STARTUP=y
 
 #
 # Scheduler options
