--- a/demo/devkit-mpc5748g/configs/devkit-mpc5748g-SMP_ram_defconfig
+++ b/demo/devkit-mpc5748g/configs/devkit-mpc5748g-SMP_ram_defconfig
@@ -18,6 +18,7 @@ CONFIG_CACHE_MAINTENANCE=y
 CONFIG_E200Z4=y
 # CONFIG_E200Z7 is not set
 CONFIG_MACH_MPC574X=y
+CONFIG_DEBUG_AUX_CORE_STARTUP=y
 
 #
 # Scheduler options
