--- a/staging/drivers/clock/Makefile
+++ b/staging/drivers/clock/Makefile
@@ -2,3 +2,5 @@
 # Staging clock drivers
 #
 staging-drivers-clock := $(srctree)/staging/drivers/clock
+
+c_src-$(CONFIG_CLOCK_N76E003) += $(staging-drivers-clock)/clock-n76e003.c
