--- a/staging/drivers/clock/Makefile
+++ b/staging/drivers/clock/Makefile
@@ -4,3 +4,4 @@
 staging-drivers-clock := $(srctree)/staging/drivers/clock
 
 c_src-$(CONFIG_CLOCK_N76E003) += $(staging-drivers-clock)/clock-n76e003.c
+c_src-$(CONFIG_CLOCK_CY7C6801XA) += $(staging-drivers-clock)/clock-cy7c6801xa.c
