--- a/demo/arduino-uno/.config
+++ b/demo/arduino-uno/.config
@@ -2,6 +2,7 @@
 # Automatically generated make config: don't edit
 # OpenPicoRTOS v1.9.x Configuration
 #
+# CONFIG_8051 is not set
 # CONFIG_ARM is not set
 CONFIG_AVR=y
 # CONFIG_C2000 is not set
