scripts: moved __clean target to specific compiler script (issue #85)

--- a/scripts/Makefile.cl2000
+++ b/scripts/Makefile.cl2000
@@ -140,6 +140,16 @@ $(target): $(obj-y) FORCE
 targets += $(target)
 endif # target
 
+# Add clean targets
+# ---------------------------------------------------------------------------
+
+obj-clean := $(obj-y)
+targets-clean := $(target)
+
+PHONY := __clean
+__clean:
+	rm -f $(obj-clean) $(targets-clean)
+
 # Add FORCE to the prequisites of a target to force it to be always rebuilt.
 # ---------------------------------------------------------------------------
 
