--- a/staging/drivers/uart/Makefile
+++ b/staging/drivers/uart/Makefile
@@ -2,3 +2,5 @@
 # Staging uart drivers
 #
 staging-drivers-uart := $(srctree)/staging/drivers/uart
+
+c_src-$(CONFIG_UART_N76E003) += $(staging-drivers-uart)/uart-n76e003.c
