demo: uart, mux & gpio on n76e003

--- a/staging/demo/n76e003/.config
+++ b/staging/demo/n76e003/.config
@@ -18,6 +18,8 @@ CONFIG_8051=y
 # CONFIG_MACH_UCSIM51 is not set
 CONFIG_MACH_N76E003=y
 # CONFIG_MACH_CY7C6801xA is not set
+# CONFIG_N76E003_TIMER_T2 is not set
+CONFIG_N76E003_TIMER_WKT=y
 
 #
 # Scheduler options
@@ -28,9 +30,9 @@ CONFIG_SINGLE_CORE=y
 #
 # General setup
 #
-CONFIG_TICK_HZ=500
+CONFIG_TICK_HZ=100
 CONFIG_TASK_COUNT=5
-CONFIG_DEFAULT_STACK_COUNT=128
+CONFIG_DEFAULT_STACK_COUNT=64
 CONFIG_DEADLOCK_COUNT=1000
 
 #
@@ -73,6 +75,7 @@ CONFIG_COND=y
 # Clock drivers
 #
 CONFIG_CLOCK_N76E003=y
+# CONFIG_CLOCK_CY7C6801XA is not set
 
 #
 # DMA drivers
@@ -134,7 +137,6 @@ CONFIG_STAGING=y
 #
 # Clock drivers
 #
-# CONFIG_CLOCK_CY7C6801XA is not set
 
 #
 # DMA drivers
@@ -151,6 +153,7 @@ CONFIG_STAGING=y
 #
 # GPIO drivers
 #
+CONFIG_GPIO_N76E003=y
 
 #
 # LIN drivers
@@ -163,6 +166,7 @@ CONFIG_STAGING=y
 #
 # MUX drivers
 #
+CONFIG_MUX_N76E003=y
 
 #
 # PWM drivers
@@ -179,3 +183,4 @@ CONFIG_STAGING=y
 #
 # UART drivers
 #
+CONFIG_UART_N76E003=y
