gpio: support for Nuvoton n76e003 (staging)

--- a/staging/drivers/gpio/Makefile
+++ b/staging/drivers/gpio/Makefile
@@ -2,3 +2,5 @@
 # Staging gpio drivers
 #
 staging-drivers-gpio := $(srctree)/staging/drivers/gpio
+
+c_src-$(CONFIG_GPIO_N76E003) += $(staging-drivers-gpio)/gpio-n76e003.c
