--- a/staging/drivers/mux/Makefile
+++ b/staging/drivers/mux/Makefile
@@ -2,3 +2,5 @@
 # Staging mux drivers
 #
 staging-drivers-mux := $(srctree)/staging/drivers/mux
+
+c_src-$(CONFIG_MUX_N76E003) += $(staging-drivers-mux)/mux-n76e003.c
