demo: ucsim_51 demo update

--- a/staging/demo/ucsim_51/.config
+++ b/staging/demo/ucsim_51/.config
@@ -28,7 +28,7 @@ CONFIG_SINGLE_CORE=y
 #
 # General setup
 #
-CONFIG_TICK_HZ=500
+CONFIG_TICK_HZ=10
 CONFIG_TASK_COUNT=5
 CONFIG_DEFAULT_STACK_COUNT=128
 CONFIG_DEADLOCK_COUNT=1000
@@ -72,6 +72,8 @@ CONFIG_EXTRA_LDFLAGS=""
 #
 # Clock drivers
 #
+# CONFIG_CLOCK_N76E003 is not set
+# CONFIG_CLOCK_CY7C6801XA is not set
 
 #
 # DMA drivers
