--- a/staging/drivers/uart/Makefile
+++ b/staging/drivers/uart/Makefile
@@ -4,3 +4,4 @@
 staging-drivers-uart := $(srctree)/staging/drivers/uart
 
 c_src-$(CONFIG_UART_N76E003) += $(staging-drivers-uart)/uart-n76e003.c
+c_src-$(CONFIG_UART_AVR_IRQDRIVEN) += $(staging-drivers-uart)/uart-avr+irqdriven.c
