--- a/demo/amigaball-lcd/configs/raspberry-pico_defconfig
+++ b/demo/amigaball-lcd/configs/raspberry-pico_defconfig
@@ -2,12 +2,15 @@
 # Automatically generated make config: don't edit
 # OpenPicoRTOS v1.9.x Configuration
 #
+# CONFIG_8051 is not set
 CONFIG_ARM=y
 # CONFIG_AVR is not set
 # CONFIG_C2000 is not set
 # CONFIG_MIPS is not set
-# CONFIG_PPC is not set
+# CONFIG_POWERPC is not set
 # CONFIG_RISCV is not set
+# CONFIG_PTHREAD is not set
+# CONFIG_WIN32 is not set
 
 #
 # ARM architecture
@@ -16,8 +19,6 @@ CONFIG_ARMV6M=y
 # CONFIG_ARMV7M is not set
 # CONFIG_ARMV7EM is not set
 CONFIG_MACH_RP2040=y
-# CONFIG_RV32IMAC is not set
-# CONFIG_MACH_GD32VF103 is not set
 
 #
 # Scheduler options
@@ -29,7 +30,6 @@ CONFIG_SMP_CORES=2
 #
 # General setup
 #
-CONFIG_SYSCLK_HZ=125000000
 CONFIG_TICK_HZ=10000
 CONFIG_TASK_COUNT=3
 CONFIG_DEFAULT_STACK_COUNT=256
@@ -47,7 +47,7 @@ CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE2=y
 CONFIG_DEBUG=y
 # CONFIG_NDEBUG is not set
 # CONFIG_MAP is not set
-CONFIG_EXTRA_CFLAGS="-DLCD_FPS=25"
+CONFIG_EXTRA_CFLAGS="-DLCD_FPS=25 -DLCD_FB_DIVIDER=8"
 CONFIG_LDSCRIPT="${srctree}/samples/ldscripts/rp2040_ram.ld"
 CONFIG_EXTRA_LDFLAGS=""
 
@@ -69,11 +69,14 @@ CONFIG_EXTRA_LDFLAGS=""
 # CONFIG_ADC_RP2040 is not set
 # CONFIG_ADC_SAM3X is not set
 # CONFIG_ADC_SAME5X is not set
+# CONFIG_ADC_RENESAS_RA4 is not set
 
 #
 # CAN drivers
 #
 # CONFIG_CAN_TI_DCAN is not set
+# CONFIG_CAN_ATSAM3X is not set
+# CONFIG_CAN_NXP_FLEXCAN is not set
 
 #
 # Clock drivers
@@ -82,6 +85,7 @@ CONFIG_CLOCK_RP2040=y
 # CONFIG_CLOCK_ATSAM3X is not set
 # CONFIG_CLOCK_ATSAME5X is not set
 # CONFIG_CLOCK_STM32H7XX is not set
+# CONFIG_CLOCK_RENESAS_RA4 is not set
 
 #
 # DMA drivers
@@ -106,6 +110,7 @@ CONFIG_GPIO_RP2040=y
 # CONFIG_GPIO_ATSAM3X is not set
 # CONFIG_GPIO_ATSAME5X is not set
 # CONFIG_GPIO_STM32H7XX is not set
+# CONFIG_GPIO_RENESAS_RA4 is not set
 
 #
 # Misc. drivers
@@ -120,6 +125,7 @@ CONFIG_MUX_RP2040=y
 # CONFIG_MUX_ATSAM3X is not set
 # CONFIG_MUX_ATSAME5X is not set
 # CONFIG_MUX_STM32H7XX is not set
+# CONFIG_MUX_RENESAS_RA4 is not set
 
 #
 # PWM drivers
@@ -129,6 +135,7 @@ CONFIG_MUX_RP2040=y
 # CONFIG_PWM_ATSAM3X_TC is not set
 # CONFIG_PWM_ATSAME5X is not set
 # CONFIG_PWM_STM32H7XX is not set
+# CONFIG_PWM_RENESAS_RA4_GPT is not set
 
 #
 # SPI drivers
@@ -137,6 +144,7 @@ CONFIG_SPI_ARM_PL022=y
 # CONFIG_SPI_ATMEL_SERCOM is not set
 # CONFIG_SPI_ATSAM3X is not set
 # CONFIG_SPI_STM32H7XX is not set
+# CONFIG_SPI_RENESAS_RA4 is not set
 
 #
 # TWI/I2C drivers
@@ -152,6 +160,7 @@ CONFIG_SPI_ARM_PL022=y
 # CONFIG_UART_ATMEL_SERCOM is not set
 # CONFIG_UART_ATSAM3X is not set
 # CONFIG_UART_STM32H7XX is not set
+# CONFIG_UART_RENESAS_RA4_SCI is not set
 
 #
 # Watchdog drivers
