--- a/arch/avr/Kconfig
+++ b/arch/avr/Kconfig
@@ -1,52 +1,49 @@
 menu "AVR8 architecture"
      depends on AVR
 
-choice
-        prompt "CPU series"
-        default ATMEGA
-
-config ATMEGA
-       bool "Atmel ATMega series"
-
 config ATTINY
-       bool "Atmel ATTiny series"
-
-endchoice
-
-# ATMega devices
+       bool
+       
+config ATMEGA
+       bool
 
 choice
-        prompt "ATMega device"
-        depends on ATMEGA
+        prompt "Select device"
 
 config MACH_ATMEGA2560
-       bool "ATMega2560"
+       bool "Atmel ATMega2560"
+       select ATMEGA
 
 config MACH_ATMEGA328P
-       bool "ATMega328p"
-
+       bool "Atmel ATMega328p"
+       select ATMEGA
+       
 config MACH_ATMEGA32U4
-       bool "ATMega32u4"
-
-endchoice
-
-# ATtiny devices
-
-choice
-        prompt "ATTiny device"
-        depends on ATTINY
-
+       bool "Atmel ATMega32u4"
+       select ATMEGA
+       
+config MACH_ATTINY88
+       bool "Atmel ATTiny88"
+       select ATTINY
+       
 config MACH_ATTINY817
-       bool "ATTiny817"
+       bool "Atmel ATTiny817"
+       select ATTINY
 
 config MACH_ATTINY1607
-       bool "ATTiny1607"
+       bool "Atmel ATTiny1607"
+       select ATTINY
+
+config MACH_LGT8FX8P
+       bool "LogicGreen LGT8FX8P"
+       select ATMEGA
 
 endchoice
 
 config SYSCLK_HZ
        int "Main clock frequency"
-       depends on AVR
+       depends on MACH_ATMEGA2560 || MACH_ATMEGA328P || \
+                  MACH_ATMEGA32U4 || MACH_ATTINY88
        default 16000000
 
 endmenu
