--- a/drivers/clock/Makefile
+++ b/drivers/clock/Makefile
@@ -5,6 +5,7 @@ drivers-clock := $(srctree)/drivers/clock
 
 c_src-$(CONFIG_CLOCK_ATMEGA2560) += $(drivers-clock)/clock-atmega2560.c
 c_src-$(CONFIG_CLOCK_ATMEGA328P) += $(drivers-clock)/clock-atmega328p.c
+c_src-$(CONFIG_CLOCK_ATTINY88) += $(drivers-clock)/clock-attiny88.c
 c_src-$(CONFIG_CLOCK_F28379X) += $(drivers-clock)/clock-f28379x.c
 c_src-$(CONFIG_CLOCK_GD32VF103) += $(drivers-clock)/clock-gd32vf103.c
 c_src-$(CONFIG_CLOCK_PIC32MX) += $(drivers-clock)/clock-pic32mx.c
