clock: support for LogicGreen LGT8FX8P (staging)

--- a/staging/drivers/clock/Makefile
+++ b/staging/drivers/clock/Makefile
@@ -2,3 +2,5 @@
 # Staging clock drivers
 #
 staging-drivers-clock := $(srctree)/staging/drivers/clock
+
+c_src-$(CONFIG_CLOCK_LGT8FX8P) += $(staging-drivers-clock)/clock-lgt8fx8p.c
