demo: updated AVR-based demos to latest SDK

--- a/demo/arduino-uno/.config
+++ b/demo/arduino-uno/.config
@@ -16,10 +16,13 @@ CONFIG_AVR=y
 # AVR8 architecture
 #
 CONFIG_ATMEGA=y
-# CONFIG_ATTINY is not set
 # CONFIG_MACH_ATMEGA2560 is not set
 CONFIG_MACH_ATMEGA328P=y
 # CONFIG_MACH_ATMEGA32U4 is not set
+# CONFIG_MACH_ATTINY88 is not set
+# CONFIG_MACH_ATTINY817 is not set
+# CONFIG_MACH_ATTINY1607 is not set
+# CONFIG_MACH_LGT8FX8P is not set
 CONFIG_SYSCLK_HZ=16000000
 
 #
@@ -48,9 +51,9 @@ CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_DEBUG=y
 # CONFIG_NDEBUG is not set
 # CONFIG_MAP is not set
-CONFIG_EXTRA_CFLAGS="-flto -fno-fat-lto-objects"
+CONFIG_EXTRA_CFLAGS=""
 CONFIG_LDSCRIPT=""
-CONFIG_EXTRA_LDFLAGS="-Os -g -flto -fuse-linker-plugin -Wl,--gc-sections"
+CONFIG_EXTRA_LDFLAGS=""
 
 #
 # Inter-Process communications
@@ -79,6 +82,7 @@ CONFIG_ADC_AVR=y
 #
 # CONFIG_CLOCK_ATMEGA2560 is not set
 CONFIG_CLOCK_ATMEGA328P=y
+# CONFIG_CLOCK_ATTINY88 is not set
 # CONFIG_CLOCK_TINYAVR is not set
 
 #
@@ -120,6 +124,7 @@ CONFIG_PWM_AVR=y
 # SPI drivers
 #
 CONFIG_SPI_AVR=y
+# CONFIG_SPI_AVR_IRQDRIVEN is not set
 # CONFIG_SPI_AVR_USART is not set
 # CONFIG_SPI_TINYAVR is not set
 
@@ -132,6 +137,7 @@ CONFIG_TWI_AVR=y
 # UART drivers
 #
 CONFIG_UART_AVR=y
+# CONFIG_UART_AVR_IRQDRIVEN is not set
 # CONFIG_UART_TINYAVR_USART is not set
 
 #
