--- a/demo/attiny1607-cnano/.config
+++ b/demo/attiny1607-cnano/.config
@@ -15,11 +15,14 @@ CONFIG_AVR=y
 #
 # AVR8 architecture
 #
-# CONFIG_ATMEGA is not set
 CONFIG_ATTINY=y
+# CONFIG_MACH_ATMEGA2560 is not set
+# CONFIG_MACH_ATMEGA328P is not set
+# CONFIG_MACH_ATMEGA32U4 is not set
+# CONFIG_MACH_ATTINY88 is not set
 # CONFIG_MACH_ATTINY817 is not set
 CONFIG_MACH_ATTINY1607=y
-CONFIG_SYSCLK_HZ=32768
+# CONFIG_MACH_LGT8FX8P is not set
 
 #
 # Scheduler options
@@ -78,6 +81,7 @@ CONFIG_ADC_TINYAVR=y
 #
 # CONFIG_CLOCK_ATMEGA2560 is not set
 # CONFIG_CLOCK_ATMEGA328P is not set
+# CONFIG_CLOCK_ATTINY88 is not set
 CONFIG_CLOCK_TINYAVR=y
 
 #
