--- a/demo/attiny817-xplained/.config
+++ b/demo/attiny817-xplained/.config
@@ -15,15 +15,14 @@ CONFIG_AVR=y
 #
 # AVR8 architecture
 #
-CONFIG_ATMEGA=y
-CONFIG_MACH_ATMEGA2560=y
+CONFIG_ATTINY=y
+# CONFIG_MACH_ATMEGA2560 is not set
 # CONFIG_MACH_ATMEGA328P is not set
 # CONFIG_MACH_ATMEGA32U4 is not set
 # CONFIG_MACH_ATTINY88 is not set
-# CONFIG_MACH_ATTINY817 is not set
+CONFIG_MACH_ATTINY817=y
 # CONFIG_MACH_ATTINY1607 is not set
 # CONFIG_MACH_LGT8FX8P is not set
-CONFIG_SYSCLK_HZ=16000000
 
 #
 # Scheduler options
@@ -35,23 +34,23 @@ CONFIG_SINGLE_CORE=y
 # General setup
 #
 CONFIG_TICK_HZ=1000
-CONFIG_TASK_COUNT=8
-CONFIG_DEFAULT_STACK_COUNT=128
+CONFIG_TASK_COUNT=6
+CONFIG_DEFAULT_STACK_COUNT=48
 CONFIG_DEADLOCK_COUNT=1000
 
 #
 # Build configuration
 #
-CONFIG_CROSS_COMPILE="avr-"
-# CONFIG_CC_NO_OPTIMIZATION is not set
-CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+CONFIG_CROSS_COMPILE="xc8-"
+CONFIG_CC_NO_OPTIMIZATION=y
+# CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 # CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE1 is not set
 # CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE2 is not set
 # CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE3 is not set
 CONFIG_DEBUG=y
 # CONFIG_NDEBUG is not set
 # CONFIG_MAP is not set
-CONFIG_EXTRA_CFLAGS=""
+CONFIG_EXTRA_CFLAGS="-DDEMO_LED -DDEMO_PWM"
 CONFIG_LDSCRIPT=""
 CONFIG_EXTRA_LDFLAGS=""
 
@@ -70,8 +69,8 @@ CONFIG_EXTRA_LDFLAGS=""
 #
 # ADC drivers
 #
-CONFIG_ADC_AVR=y
-# CONFIG_ADC_TINYAVR is not set
+# CONFIG_ADC_AVR is not set
+CONFIG_ADC_TINYAVR=y
 
 #
 # CAN drivers
@@ -80,10 +79,10 @@ CONFIG_ADC_AVR=y
 #
 # Clock drivers
 #
-CONFIG_CLOCK_ATMEGA2560=y
+# CONFIG_CLOCK_ATMEGA2560 is not set
 # CONFIG_CLOCK_ATMEGA328P is not set
 # CONFIG_CLOCK_ATTINY88 is not set
-# CONFIG_CLOCK_TINYAVR is not set
+CONFIG_CLOCK_TINYAVR=y
 
 #
 # DMA drivers
@@ -92,7 +91,7 @@ CONFIG_CLOCK_ATMEGA2560=y
 #
 # EEPROM drivers
 #
-CONFIG_EEPROM_AVR=y
+# CONFIG_EEPROM_AVR is not set
 
 #
 # Flash drivers
@@ -101,8 +100,8 @@ CONFIG_EEPROM_AVR=y
 #
 # GPIO drivers
 #
-CONFIG_GPIO_AVR=y
-# CONFIG_GPIO_TINYAVR is not set
+# CONFIG_GPIO_AVR is not set
+CONFIG_GPIO_TINYAVR=y
 
 #
 # Misc. drivers
@@ -111,38 +110,36 @@ CONFIG_GPIO_AVR=y
 #
 # MUX drivers
 #
-CONFIG_MUX_AVR=y
-# CONFIG_MUX_TINYAVR is not set
+# CONFIG_MUX_AVR is not set
+CONFIG_MUX_TINYAVR=y
 
 #
 # PWM drivers
 #
-CONFIG_PWM_AVR=y
-# CONFIG_PWM_TINYAVR is not set
+# CONFIG_PWM_AVR is not set
+CONFIG_PWM_TINYAVR=y
 
 #
 # SPI drivers
 #
-CONFIG_SPI_AVR=y
-# CONFIG_SPI_AVR_IRQDRIVEN is not set
+# CONFIG_SPI_AVR is not set
 # CONFIG_SPI_AVR_USART is not set
-# CONFIG_SPI_TINYAVR is not set
+CONFIG_SPI_TINYAVR=y
 
 #
 # TWI/I2C drivers
 #
-CONFIG_TWI_AVR=y
+# CONFIG_TWI_AVR is not set
 
 #
 # UART drivers
 #
-CONFIG_UART_AVR=y
-# CONFIG_UART_AVR_IRQDRIVEN is not set
-# CONFIG_UART_TINYAVR_USART is not set
+# CONFIG_UART_AVR is not set
+CONFIG_UART_TINYAVR_USART=y
 
 #
 # Watchdog drivers
 #
-CONFIG_WD_AVR=y
-# CONFIG_WD_TINYAVR is not set
+# CONFIG_WD_AVR is not set
+CONFIG_WD_TINYAVR=y
 # CONFIG_STAGING is not set
