--- a/staging/drivers/clock/Makefile
+++ b/staging/drivers/clock/Makefile
@@ -4,3 +4,4 @@
 staging-drivers-clock := $(srctree)/staging/drivers/clock
 
 c_src-$(CONFIG_CLOCK_LGT8FX8P) += $(staging-drivers-clock)/clock-lgt8fx8p.c
+c_src-$(CONFIG_CLOCK_STM32F10XXX) += $(staging-drivers-clock)/clock-stm32f10xxx.c
