gpio: STMicro stm32f10xxx GPIO support (staging)

--- a/staging/drivers/gpio/Makefile
+++ b/staging/drivers/gpio/Makefile
@@ -4,3 +4,4 @@
 staging-drivers-gpio := $(srctree)/staging/drivers/gpio
 
 c_src-$(CONFIG_GPIO_N76E003) += $(staging-drivers-gpio)/gpio-n76e003.c
+c_src-$(CONFIG_GPIO_STM32F10XXX) += $(staging-drivers-gpio)/gpio-stm32f10xxx.c
