--- a/staging/drivers/gpio/Kconfig
+++ b/staging/drivers/gpio/Kconfig
@@ -4,4 +4,8 @@ config GPIO_N76E003
        depends on 8051
        bool "Nuvoton N76E003 series GPIOs"
 
+config GPIO_STM32F10XXX
+       depends on ARM
+       bool "STMicro STM32F10XXX series GPIOs"
+
 endmenu
