--- a/staging/drivers/mux/Makefile
+++ b/staging/drivers/mux/Makefile
@@ -4,3 +4,4 @@
 staging-drivers-mux := $(srctree)/staging/drivers/mux
 
 c_src-$(CONFIG_MUX_N76E003) += $(staging-drivers-mux)/mux-n76e003.c
+c_src-$(CONFIG_MUX_STM32F10XXX) += $(staging-drivers-mux)/mux-stm32f10xxx.c
